[gd_scene load_steps=6 format=3 uid="uid://cfb7u18ckq2tm"]

[ext_resource type="Script" path="res://UI/menus/mix_menu.gd" id="1_hff7h"]
[ext_resource type="Texture2D" uid="uid://dus5aya120jhq" path="res://assets/art/items/vial.png" id="2_x57td"]

[sub_resource type="LabelSettings" id="LabelSettings_18quo"]
font_size = 30
outline_size = 2
outline_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_673op"]
font_size = 60
outline_size = 4
outline_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_xp5h2"]
outline_size = 4
outline_color = Color(0, 0, 0, 1)

[node name="MixMenu" type="CanvasLayer" groups=["mix_menu"]]
process_mode = 1
visible = false
script = ExtResource("1_hff7h")

[node name="Background" type="Panel" parent="."]
self_modulate = Color(1, 1, 1, 0.560784)
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="CenterContainer" type="CenterContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -639.0
offset_bottom = -361.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(1.5, 1.5)

[node name="Panel" type="Panel" parent="CenterContainer"]
custom_minimum_size = Vector2(280, 150)
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer/Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -6.0
offset_bottom = -1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Panel" type="Panel" parent="CenterContainer/Panel/VBoxContainer"]
custom_minimum_size = Vector2(120, 40)
layout_mode = 2

[node name="MixLabel" type="Label" parent="CenterContainer/Panel/VBoxContainer/Panel"]
layout_mode = 2
offset_right = 280.0
offset_bottom = 42.0
theme_override_font_sizes/font_size = 30
text = "Mix Menu"
label_settings = SubResource("LabelSettings_18quo")
horizontal_alignment = 1
vertical_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="CenterContainer/Panel/VBoxContainer"]
custom_minimum_size = Vector2(240, 90)
layout_mode = 2
alignment = 1

[node name="Mix1" type="Panel" parent="CenterContainer/Panel/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(80, 80)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="VialDisplay1" type="TextureRect" parent="CenterContainer/Panel/VBoxContainer/HBoxContainer/Mix1"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
focus_neighbor_left = NodePath("../../Mix2/VialDisplay2")
focus_neighbor_right = NodePath("../../Mix2/VialDisplay2")
texture = ExtResource("2_x57td")
stretch_mode = 5

[node name="PlusMark" type="Panel" parent="CenterContainer/Panel/VBoxContainer/HBoxContainer"]
self_modulate = Color(1, 1, 1, 0)
custom_minimum_size = Vector2(80, 80)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="Label" type="Label" parent="CenterContainer/Panel/VBoxContainer/HBoxContainer/PlusMark"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "+"
label_settings = SubResource("LabelSettings_673op")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Mix2" type="Panel" parent="CenterContainer/Panel/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(80, 80)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="VialDisplay2" type="TextureRect" parent="CenterContainer/Panel/VBoxContainer/HBoxContainer/Mix2"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
focus_neighbor_left = NodePath("../../Mix1/VialDisplay1")
focus_neighbor_right = NodePath("../../Mix1/VialDisplay1")
texture = ExtResource("2_x57td")
stretch_mode = 5

[node name="InstructionLable" type="Label" parent="CenterContainer/Panel/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Press Space to confirm Selection"
label_settings = SubResource("LabelSettings_xp5h2")
horizontal_alignment = 1
vertical_alignment = 1
